# python-project-template

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: build.yml  lint-test.yml
hooks/: post_gen_project.py  pre_gen_project.py
pages/: gitlab.md
tests/: test_utils.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cookiecutter-config-file.yml  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/.github/workflows/: lint-test.yml  test.yml  {{ cookiecutter.package_name }}.yml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/tests/: conftest.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/tests/test_example/: test_hello.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/{{ cookiecutter.package_name }}/: example.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: example.py
