[project]
name = "{{ cookiecutter.project_name.lower().replace(' ', '-') }}"
version = "0.1.0"
requires-python = ">={{ cookiecutter.python_version }}"
{%- if cookiecutter.install_pydantic %}
dependencies = [
    "pydantic>=2.9.2",
]
{%- else -%}
dependencies = []
{%- endif %}

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2",
    "pre-commit>=4.2.0,<5",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.2.1,<7",
    "coverage>=7.8.0,<8",
    "typeguard>=4.4.2,<5",
    "ruff>=0.12.11,<0.13",
    "safety>=3.4.0,<4",
    "deptry>=0.23.0,<0.24",
{%- if cookiecutter.git_platform == 'gitlab' %}
    "mypy-gitlab-code-quality>=1.3.0,<1.4.0",
{%- endif %}
]

[tool.uv]
package = false

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
junit_xml = "reports/mypy.xml"
python_version = "{{ cookiecutter.python_version }}"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
color_output = true
{%- if cookiecutter.install_pydantic %}
plugins = ["pydantic.mypy"]
{% endif %}
strict = true  # https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
{% if cookiecutter.install_pydantic %}
[tool.pydantic-mypy]
# https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
{% endif %}
[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::ImportWarning"]
testpaths = ["{{ cookiecutter.package_name }}", "tests"]
xfail_strict = true

# Extra options:
addopts = [
  "--color=yes",
  "--failed-first",
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "--verbosity=2",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--typeguard-packages={{ cookiecutter.package_name }}",
  "--cov",
  "--junitxml=reports/junit.xml"
]

[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
data_file = "reports/.coverage"
source = ["{{ cookiecutter.package_name }}"]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]
# https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/#top-level
line-length = {{ cookiecutter.line_length }}

[tool.ruff.lint]
# https://docs.astral.sh/ruff/settings/#lint
select = ["ALL"]
ignore = [
  "D", # pydocstyle
  "TD", # flake8-todos
  "FIX", # flake8-fixme
  "ANN", # flake8-annotations (handled by mypy)
  "EM", # flake8-errmsg - String literals in exceptions
  "E501", # pycodestyle - line too long (handled by formatter)
  "COM812", # forced by ruff formatter
  "ISC001", # forced by ruff formatter
  "TRY003", # long message for exceptions
  "EM101", # allow string literals for exceptions
  "EM102", # allow f-string literals for exceptions
]
unfixable = [
  "F", # pyflakes
  "ERA", # eradicate - commented-out code
]
allowed-confusables = [
  "а", "А", "б", "Б", "в", "В", "г", "Г", "е", "Е", "з", "З", "и", "И", "к", "К", "м", "М",
  "н", "Н", "о", "О", "р", "Р", "с", "С", "т", "Т", "у", "У", "ф", "Ф", "х", "Х"  # Allow cyrillic letters
]

[tool.ruff.lint.per-file-ignores]
# https://docs.astral.sh/ruff/settings/#lint_per-file-ignores
"__init__.py" = [
  "F401", # Unused import
  "F403", # Import star
  "ARG001", # Unused function argument (using fixtures from other fixtures)
]
"tests/**/*.py" = [
  "S101", # Use of assert detected (assert allowed in tests)
  "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.flake8-tidy-imports]
# https://docs.astral.sh/ruff/settings/#lintflake8-tidy-imports
ban-relative-imports = "all"

[tool.ruff.lint.flake8-boolean-trap]
# https://docs.astral.sh/ruff/settings/#lintflake8-boolean-trap
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-builtins]
# https://docs.astral.sh/ruff/settings/#lintflake8-builtins
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-bugbear]
# https://docs.astral.sh/ruff/settings/#lintflake8-bugbear
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi_filter.FilterDepends"]

[tool.ruff.lint.flake8-type-checking]
# https://docs.astral.sh/ruff/settings/#lintflake8-type-checking
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 1
split-on-trailing-comma = false

[tool.ruff.lint.isort.sections]
# https://docs.astral.sh/ruff/settings/#lint_isort_sections
"typing" = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]

[tool.ruff.lint.pep8-naming]
# https://docs.astral.sh/ruff/settings/#lintpep8-naming
classmethod-decorators = [
  # Allow Pydantic's `@validator` decorator to trigger class method treatment.
  "pydantic.validator",
  # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class method treatment.
  "declared_attr",
  "expression",
  "comparator",
]

[tool.ruff.lint.pycodestyle]
# https://docs.astral.sh/ruff/settings/#lintpycodestyle
max-doc-length = {{ cookiecutter.line_length }}

[tool.ruff.lint.pydocstyle]
# https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "google"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lintpylint
allow-dunder-method-names = ["__tablename__", "__table_args__"]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 10
max-branches = 15
max-statements = 30

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.deptry.per_rule_ignores]
# https://deptry.com/usage/#per-rule-ignores
DEP002 = []
DEP003 = []
